--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mumoy</title>
+    <link rel="icon" type="image/jpg" href="/images/mumoy-icon.jpg" />
     <link rel="stylesheet" href="{{ url_for('static', path='styles.css') }}" />
   </head>
   <body>
@@ -36,3 +37,4 @@
     {% endif %}
   </body>
 </html>
+
